# Computer_Vision

./: .gitignore  README.md
Convolution/: CMakeLists.txt  main.cpp
Convolution/Convolution/: main.cpp
Convolution/Convolution/Contracts/: Mask.cpp  Mask.hpp
Convolution/Convolution/Kernels/: BoxBlur.cpp  BoxBlur.hpp  EdgeDetection.cpp  EdgeDetection.hpp  GaussianBlur.cpp  GaussianBlur.hpp  Sharpening.cpp  Sharpening.hpp
Convolution/Convolution/Utils/: MathFunctions.cpp  MathFunctions.hpp
Convolution/src/Contracts/: Mask.cpp  Mask.hpp
Convolution/src/ConvolutionKernels/: BoxBlur.cpp  BoxBlur.hpp  EdgeDetection.cpp  EdgeDetection.hpp  GaussianBlur.cpp  GaussianBlur.hpp  Sharpening.hpp
DetailsEdges/: CMakeLists.txt  main.cpp
GaussianBlur/: CMakeLists.txt  GaussianBlurMask.cpp  main.cpp
RotatingImages/: CMakeLists.txt  main.cpp
SharpeningAnImage/: CMakeLists.txt  main.cpp
